dns-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: www.chikithsa.com 
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeapp-service
                port:
                  number: 80
