ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  ingressClassName: nginx
  rules:
    - host: sapp1.chikithsa.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port: 
                  number: 80
    - host: sapp2.chikithsa.com
      http:
        paths:
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port: 
                  number: 80
    - host: sapp3.chikithsa.com
      http:
        paths:
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port: 
                  number: 80
    - host: www.chikithsa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeapp-service
                port: 
                  number: 80

  tls:
  - hosts:
    - sapp1.chikithsa.com
    secretName: sapp1-chikithsa-secret           
  - hosts:
    - sapp2.chikithsa.com
    secretName: sapp2-chikithsa-secret 
  - hosts:
    - sapp3.chikithsa.com
    secretName: sapp3-chikithsa-secret 
  - hosts:
    - www.chikithsa.com
    secretName: www-chikithsa-secret
